divided into rating and comment